--- a/overlay-ui/index.html
+++ b/overlay-ui/index.html
@@ -5,49 +5,23 @@
   <title>AI Overlay</title>
   <style>
     body {
-      margin: 0;
-      background: transparent;
-      font-family: sans-serif;
-      color: white;
+        margin: 0;
+        background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent black */
+        color: white;
     }
-    #container {
-      background-color: rgba(0, 0, 0, 0.7);
-      padding: 20px;
-      border-radius: 8px;
-      width: 100%;
-      height: 100%;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-    }
-    input {
-      width: 80%;
-      padding: 8px;
-      font-size: 16px;
-    }
-    button {
-      margin-top: 10px;
-      padding: 8px 16px;
-      font-size: 16px;
-      cursor: pointer;
-    }
-    #response {
-      margin-top: 15px;
-      padding: 10px;
-      background: rgba(255,255,255,0.1);
-      border-radius: 6px;
-      width: 80%;
-      min-height: 60px;
-    }
+    
+    
   </style>
 </head>
 <body>
   <div id="container">
-    <input id="prompt" type="text" placeholder="Ask something...">
-    <button id="ask">Ask AI</button>
-    <div id="response"></div>
+    <button id="startButton">Start Capture</button>
+    <button id="stopButton">Stop Capture</button>
+    <div id="sourceContainer"></div>
+    <video autoplay muted style="width: 100%; max-width: 720px;"></video>
+
+    <script src="renderer.js"></script>
   </div>
-  
+
 </body>
 </html>
